fix: letter spacing for title and, animate hand icon on button

--- a/src/app/modules/booking/pages/view-booking/view-booking.component.scss
+++ b/src/app/modules/booking/pages/view-booking/view-booking.component.scss
@@ -2,6 +2,7 @@
   .header {
     font-family: Baloo !important;
     color: #154f5b;
+    letter-spacing: -2px;
     .one {
       font-family: Baloo;
       color: #64c2bc;
