--- a/src/app/modules/getting-started/pages/add-payment/add-payment.component.scss
+++ b/src/app/modules/getting-started/pages/add-payment/add-payment.component.scss
@@ -12,6 +12,7 @@
   border-top-right-radius: 20px;
   border-bottom: 2px solid #d6e1e3;
   .header {
+    letter-spacing: -2px;
     @apply font-baloo text-primaryFont;
     .one {
       color: #64c2bc;
